featured product section spacing problem fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -221,6 +221,7 @@ body {
 
 .products img {
     width: 100%;
+    object-fit: cover;
 }
 
 .products-content {
@@ -315,7 +316,7 @@ body {
     }
 }
 /* ============================ */
-@media screen and (min-width:577px) {
+/* @media screen and (min-width:577px) {
     .more-button {
         margin-right: 0%;
     }
@@ -325,4 +326,4 @@ body {
     .products-content h2 {
         font-size: 1.8rem;
     }
-}
+} */
